apps/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-public
  namespace: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - &host cloud.tmem.de
      secretName: nextcloud-public-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /s/
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
